src/composer/snapshots/seele__composer__resolve__tests__resolve_submission@submission_nested_sequence_1.yaml.snap
---
source: src/composer/resolve.rs
expression: submission
input_file: src/composer/stubs/submission_nested_sequence_1.yaml
---
Submission(
  id: "[id]",
  root_directory: "test",
  config: SubmissionConfig(
    id: "[id]",
    steps: {
      "one": {
        "status": "PENDING",
      },
      "two": {
        "status": "PENDING",
        "steps": {
          "two-one": {
            "status": "PENDING",
          },
          "two-two": {
            "status": "PENDING",
          },
        },
      },
      "three": {
        "status": "PENDING",
      },
    },
    report: None,
    report_error: None,
  ),
  root_node: RootTaskNode(
    id: "[id]",
    tasks: [
      TaskNode(
        name: ".one",
        id: "[id]",
        children: [
          TaskNode(
            name: ".two",
            id: "[id]",
            children: [
              TaskNode(
                name: ".three",
                id: "[id]",
                children: [],
                ext: Config(
                  action: "seele/noop@1",
                  test: 3,
                ),
              ),
            ],
            ext: [
              TaskNode(
                name: ".two.two-one",
                id: "[id]",
                children: [
                  TaskNode(
                    name: ".two.two-two",
                    id: "[id]",
                    children: [],
                    ext: Config(
                      action: "seele/noop@1",
                      test: 22,
                    ),
                  ),
                ],
                ext: Config(
                  action: "seele/noop@1",
                  test: 21,
                ),
              ),
            ],
          ),
        ],
        ext: Config(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
