src/composer/snapshots/seele__composer__resolve__tests__resolve_submission@submission_nested_sequence_2.yaml.snap
---
source: src/composer/resolve.rs
expression: submission
input_file: src/composer/stubs/submission_nested_sequence_2.yaml
---
Submission(
  id: "[id]",
  config: SubmissionConfig(
    id: "[id]",
    steps: {
      "one": {
        "status": "pending",
      },
      "two": {
        "status": "pending",
        "steps": {
          "two-one": {
            "status": "pending",
          },
          "two-two": {
            "status": "pending",
          },
        },
      },
      "three": {
        "status": "pending",
      },
      "four": {
        "status": "pending",
        "steps": {
          "four-one": {
            "status": "pending",
          },
          "four-two": {
            "status": "pending",
            "parallel": [
              {
                "status": "pending",
              },
              {
                "status": "pending",
              },
              {
                "status": "pending",
              },
            ],
          },
          "four-three": {
            "status": "pending",
            "steps": {
              "four-three-one": {
                "status": "pending",
              },
            },
          },
        },
      },
    },
  ),
  root: RootTaskNode(
    id: "[id]",
    tasks: [
      TaskNode(
        id: "[id]",
        children: [
          TaskNode(
            id: "[id]",
            children: [
              TaskNode(
                id: "[id]",
                children: [
                  TaskNode(
                    id: "[id]",
                    children: [],
                    ext: [
                      TaskNode(
                        id: "[id]",
                        children: [
                          TaskNode(
                            id: "[id]",
                            children: [
                              TaskNode(
                                id: "[id]",
                                children: [],
                                ext: [
                                  TaskNode(
                                    id: "[id]",
                                    children: [],
                                    ext: ActionNoopConfig(
                                      action: "seele/noop@1",
                                      test: 431,
                                    ),
                                  ),
                                ],
                              ),
                            ],
                            ext: [
                              TaskNode(
                                id: "[id]",
                                children: [],
                                ext: ActionNoopConfig(
                                  action: "seele/noop@1",
                                  test: 421,
                                ),
                              ),
                              TaskNode(
                                id: "[id]",
                                children: [],
                                ext: ActionNoopConfig(
                                  action: "seele/noop@1",
                                  test: 422,
                                ),
                              ),
                              TaskNode(
                                id: "[id]",
                                children: [],
                                ext: ActionNoopConfig(
                                  action: "seele/noop@1",
                                  test: 423,
                                ),
                              ),
                            ],
                          ),
                        ],
                        ext: ActionNoopConfig(
                          action: "seele/noop@1",
                          test: 41,
                        ),
                      ),
                    ],
                  ),
                ],
                ext: ActionNoopConfig(
                  action: "seele/noop@1",
                  test: 3,
                ),
              ),
            ],
            ext: [
              TaskNode(
                id: "[id]",
                children: [
                  TaskNode(
                    id: "[id]",
                    children: [],
                    ext: ActionNoopConfig(
                      action: "seele/noop@1",
                      test: 22,
                    ),
                  ),
                ],
                ext: ActionNoopConfig(
                  action: "seele/noop@1",
                  test: 21,
                ),
              ),
            ],
          ),
        ],
        ext: ActionNoopConfig(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
