src/composer/snapshots/seele__composer__resolve__tests__resolve_submission@submission_simple.yaml.snap
---
source: src/composer/resolve.rs
expression: submission
input_file: src/composer/stubs/submission_simple.yaml
---
Submission(
  id: "[id]",
  config: SubmissionConfig(
    id: "[id]",
    steps: {
      "one": {
        "status": "pending",
      },
      "two": {
        "status": "pending",
      },
      "three": {
        "status": "pending",
      },
    },
  ),
  root: RootTaskNode(
    id: "[id]",
    tasks: [
      TaskNode(
        id: "[id]",
        children: [
          TaskNode(
            id: "[id]",
            children: [
              TaskNode(
                id: "[id]",
                children: [],
                ext: ActionNoopConfig(
                  action: "seele/noop@1",
                  test: 3,
                ),
              ),
            ],
            ext: ActionNoopConfig(
              action: "seele/noop@1",
              test: 2,
            ),
          ),
        ],
        ext: ActionNoopConfig(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
